--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,22 @@ body {
   color: var(--accent-color);
 }
 
+.nav-item {
+  display: block;
+  position: relative;
+}
+
+.current::after {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: var(--accent-color);
+  border-radius: 4px;
+}
+
 .current {
   color: var(--accent-color);
 }
@@ -237,10 +253,46 @@ body {
   margin-top: 0;
   margin-right: 0;
   margin-bottom: 30px;
-
+  width: 270px;
   height: 120px;
   border-radius: 4px;
   background-color: var(--secondary-white-color);
+}
+
+.icon-1::before {
+  content: "";
+  width: 270px;
+  height: 120px;
+  background-image: url("../img/antenna-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.icon-2::before {
+  content: "";
+  width: 270px;
+  height: 120px;
+  background-image: url("../img/clock-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.icon-3::before {
+  content: "";
+  width: 270px;
+  height: 120px;
+  background-image: url("../img/diagram-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.icon-4::before {
+  content: "";
+  width: 270px;
+  height: 120px;
+  background-image: url("../img/astronaut-1.svg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .quality-section {
