--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ body {
   margin-right: 10px;
   height: 20px;
   width: 20px;
-  fill: var(--primary-text-color);
+  fill: currentColor;
 }
 
 .contacts-icon:hover {
@@ -169,7 +169,7 @@ body {
 }
 
 .contacts-item-link {
-  display: block;
+  display: flex;
   color: var(--primary-title-color);
 }
 
@@ -475,25 +475,23 @@ body {
   margin-right: 10px;
 }
 
-.social-wrapper {
+.social-list .social-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
+  color: #afb1b8;
 }
 
 .social-wrapper:hover {
   background-color: var(--accent-color);
+  color: var(--primary-white-color);
 }
 
 .social-icons-svg {
-  fill: #afb1b8;
-}
-
-.social-icons-svg:hover {
-  fill: var(--primary-white-color);
+  fill: currentColor;
 }
 
 /*Customers*/
