--- a/css/style.css
+++ b/css/style.css
@@ -702,6 +702,11 @@ body {
   border: 1px solid #eeeeee;
 }
 
+.work-list > .work-list-item:hover {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
 .work-list-item:nth-child(3n) {
   margin-right: 0;
 }
