--- a/css/style.css
+++ b/css/style.css
@@ -207,15 +207,22 @@ body {
   margin-top: 0;
   text-align: center;
   background-color: var(--primary-text-color);
-  background-image: url("../img/Header-img.png");
-  height: 600px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.6),
+      rgba(47, 48, 58, 0.6)
+    ),
+    url("../img/Header.images.jpg");
+
   background-repeat: no-repeat;
 }
 
+/*
+тут був попередній фон
 .wprapper-transparent {
   background-color: rgba(47, 48, 58, 0.8);
-  height: 100%;
-}
+  height: 110%;
+}*/
 
 .hero-modal-btn {
   display: inline-block;
@@ -599,9 +606,24 @@ body {
   cursor: pointer;
 }
 
+/*
+  Потрібно буде поставити або видалити на вимогу ментора
+.footer-btn::after {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-image: url(../img/footericon/icon-send.svg);
+  background-repeat: no-repeat;
+  margin-left: 10px;
+}*/
+
 .icon-send {
   display: flex;
   margin-left: 10px;
+}
+
+.icon-send {
+  fill: currentColor;
 }
 
 /* footer logo*/
@@ -670,6 +692,10 @@ body {
 
 .footer-social-wrapper:hover {
   background-color: var(--accent-color);
+}
+
+.footer-social-icon {
+  fill: var(--primary-white-color);
 }
 
 .footer-title {
