--- a/css/style.css
+++ b/css/style.css
@@ -768,11 +768,17 @@ body {
   background: #f5f4fa;
 }
 
-.portfolio-list-bnt {
+.portfolio-list-btn {
   display: block;
 }
 
-.portfolio-list-bnt:not(:last-child) {
+.portfolio-list-btn:hover {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 3px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
+.portfolio-list-btn:not(:last-child) {
   margin-right: 8px;
 }
 
